fix: login error message not showing

--- a/frontend/stylesheets/login.css.scss
+++ b/frontend/stylesheets/login.css.scss
@@ -18,6 +18,11 @@
     right: 0;
     margin: auto;
 
+    .err-message {
+      margin-top: 12px;
+      margin-bottom: -12px;
+    }
+
     .title-field {
       padding-top: 26px;
     }
